<?xml version="1.0"?>
<package format="2">
  <name>voxel_lio_sam</name>
  <version>0.0.0</version>
  <description>The voxel_lio_sam package</description>

  <maintainer email="zhouzhou@todo.todo">zhouzhou</maintainer>


  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>std_msgs</build_export_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>


  <depend>pcl_ros</depend>



  <export>
  </export>
</package>
